<resources>

    <string name="google_map_api_key">AIzaSyBwejucEA4uHmcE1JKEPbtXR1YG8vnFWqQ</string>
    <string name="app_name">Mapd</string>
    <string name="app_title">Mapd</string>
    <string name="sign_in_title">Sign Into Your Account</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="signup_text">Sign Up For Your Account</string>
    <string name="signup_text_title">Signup For Your Account</string>
    <string name="to_login">ALREADY HAVE AN ACCOUNT ?</string>
    <string name="profile_setup_title">Let\'s set up your basic profile</string>
    <string name="next_page">next</string>
    <string name="next_slide">Next</string>
    <string name="nearby_places_title_msg">Nearby places of interest</string>
</resources>